tests/NormalTests/paczka1/small_fuzzy/32504859.err
Error in line 1: vBKBy S644 20,6
Error in line 3: ZMnL A923 41,2
Error in line 7: ZMnL S644 6),3
Error in line 12: fnY A923 -2,4
Error in line 10: S644 S294 46,8
Error in line 5: fnY A923 26,6
